# TasqEngine

./: CMakeLists.txt  README.md
include/Input/: Input.hpp
include/Platform/: Platform.hpp
include/Renderer/: Renderer.hpp
include/Texture/: Texture.hpp
src/: main.cpp
src/Input/: Input.cpp
src/Platform/: Platform.cpp
src/Renderer/: Renderer.cpp
src/Texture/: Texture.cpp
